# bonsai-foundry-template

./: README.md  foundry.toml  sdn_mini.xml
contracts/: AMLWallet.sol  OFACWallet.sol
core/: Cargo.toml
core/src/: lib.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
tests/: AMLWallet.t.sol  OFACWallet.t.sol
