[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-not-0fac-sanctioned"
path = "src/bin/is_not_0fac_sanctioned.rs"

[workspace]

[dependencies]
json = "0.12"
roxmltree = "0.19.0"
core = { path = "../../core" }
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = { version = "0.20.1", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
